--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -1,5 +1,10 @@
-/* Song page songs <ul> No Bullet */
+/* Navbar  */
+.nav-bar-text {
+    color: white;
+    font-size: large;
+}
 
+/* Song_list page songs  */
 .song-li {
     list-style-type: none;
 }
@@ -22,18 +27,6 @@
 
 
 /* Landing Page */
-.blue-pulse-hero-imag {
-    background-image: url('/static/images/blue-pulse.jpg');
-    background-position: center center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
-}
 
 .all-body {
     background-image: url('/static/images/blue-pulse.jpg');
